--- a/public/styles.css
+++ b/public/styles.css
@@ -72,3 +72,27 @@ ul {
 li {
   margin-bottom: 0.5em;
 }
+
+progress {
+  appearance: none;
+  width: 100%;
+  height: 20px;
+  border-radius: 10px;
+  background-color: #1f1f1f;
+}
+
+progress::-webkit-progress-bar {
+  background-color: #1f1f1f;
+  border-radius: 10px;
+}
+
+progress::-webkit-progress-value {
+  background-color: #4caf50;
+  border-radius: 10px;
+}
+
+progress::-moz-progress-bar {
+  background-color: #4caf50;
+  border-radius: 10px;
+}
+
