--- a/public/styles.css
+++ b/public/styles.css
@@ -82,10 +82,17 @@ li {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-right: 1em;
 }
 
 .file-button:hover {
   background-color: #4477aa;
+}
+
+.file-list-label {
+  font-family: monospace;
+  font-size: 0.95em;
+  color: #ccc;
 }
 
 progress {
