--- a/public/styles.css
+++ b/public/styles.css
@@ -77,7 +77,8 @@ li {
   display: inline-block;
   padding: 0.6em 1em;
   font-size: 1em;
-  font-family: inherit; /* matches the Upload button */
+  /*font-family: inherit;  matches the Upload button */
+  font-family: Consolas, monospace;
   background-color: #336699;
   color: white;
   border: none;
